[project]
name = "midasmlpy"
description = "Python wrapper for midasml"
readme = "README.md"
authors = [
    { name = "Jonas Striaukas", email = "jonas.striaukas@gmail.com" },
    { name = "Kris Stern", emaiL = "krisstern@outlook.com"}
]
requires-python = ">=3.8"

[project.urls]
"Homepage" = "https://github.com/jstriaukas/midasmlpy"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [
    ".", "midasmlpy"]